examples/test/testpolicy8711.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8711
  namespace: namespace284
spec:
  podSelector:
    matchLabels:
      key30: value0
      key13: value35
      key6: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value38
          key33: value16
      podSelector:
        matchLabels:
          key17: value12
